GNOME Bugzilla – Bug 699431
[PATCH] xlib: Don't crash just because the display doesn't expose RANDR
Last modified: 2013-08-25 06:39:10 UTC
Created attachment 243015 [details] [review] xlib: Don't crash just because the display doesn't expose RANDR You have to specify a description for this bug.
Thanks, I've pushed this to master, cogl-1.16 and cogl-1.14
Could a new 1.14 release be done including this and other fixes from its branch? Thanks a lot